style.css
/* ... */
    .ux_banners img:hover{
        transform: translateY(-1.5em);
    }

    /*---------*/

    .mobell_text{
        z-index: 2;
        grid-column: 1/4;
        grid-row: 3;
        padding-left: 8%;
        text-align: end;
    }

    .cp_events_text{
        z-index: 3;
        grid-column: 3/6;
        grid-row: 7;
        padding-right: 8%; 
        max-width: 60ch;
    }

    .slo_transit_text{
        z-index: 4;
        grid-column: 1/4;
        grid-row: 11;
        padding-left: 8%; 
        text-align: end;
    }

    .mobell_app{
        grid-column: 4/6;
        grid-row: 1/7;
        z-index: 2;
        margin-right: 15%;
        align-self: center;
    }

    .cp_events_app{
        grid-column: 1/3;
        grid-row: 5/11;
        z-index: 3;
        margin-left: 15%;
        align-self: center;
    }

    .slo_transit_app{
        grid-column: 4/6;
        grid-row: 9/15;
        z-index: 4;
        margin-right: 15%;
        align-self: center;
    }

    /*Avoiding awkward device position*/
    @media only screen and (max-width: 60em) {
        .mobell_app{transform: translateY(4em)}
        .cp_events_app{transform: translateY(4em)}
        .slo_transit_app{transform: translateY(4em)}
    }

    @media only screen and (max-width: 41em) {
        .mobell_app{transform: translateY(0)}
        .cp_events_app{transform: translateY(0)}
        .slo_transit_app{transform: translateY(0)}
        .ux_banners img:hover{transform: translateY(0)}
    }

    @media only screen and (max-width: 35em) {
        .mobell_app{grid-column: 1/-1; margin: 0; max-height: 15em; opacity: .2;}
        .mobell_text{grid-column: 1/-1; padding: 0 7%; text-align: center; z-index: 9}
        .cp_events_app{grid-column: 1/-1; margin: 0; max-height: 15em; opacity: .1;}
        .cp_events_text{grid-column: 1/-1; padding: 0 7%; text-align: center; z-index: 9}
        .slo_transit_app{grid-column: 1/-1; margin: 0; max-height: 15em; opacity: .1;}
        .slo_transit_text{grid-column: 1/-1; padding: 0 7%; text-align: center; z-index: 9}
        .ux_banners img{-webkit-filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0));filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0));}
    }

    .mobell_color{
        border-top-left-radius: .7em;
        border-top-right-radius: .7em;
        z-index: 1;
        grid-row: 2/6;
        grid-column: 1/6;
        width: 100%;
        height: 100%;
        background-color: rgb(238, 171, 0);
    }

    .cp_events_color{
        z-index: 2;
        grid-row: 6/10;
        grid-column: 1/6;
        width: 100%;
        height: 100%;
        background-color: rgb(3, 86, 66);
    }

    .slo_transit_color{
        z-index: 3;
        grid-row: 10/16;
        grid-column: 1/6;
        width: 100%;
        height: 100%;
        background-color: rgb(16, 79, 163);
    }

    /*---------*/

    .more_ux{
        border-bottom-left-radius: .7em;
        border-bottom-right-radius: .7em;
        z-index: 10;
        grid-column: 1/-1;
        grid-row: 14/18;
        background-color: #F8F8F8;
        background-image: url(media/index_ux/more_ux.png);
        background-position: 40% 40%;
        background-repeat: no-repeat;
        background-size: cover;
    }

    .more_ux_text{
        margin-top: 6em;
        margin-left: 10%;
    }

    .more_ux_text h1{
        color: #242424;
    }

    .more_ux_text button{
        color: #242424;
        border: #242424 solid 2px;
        margin-top: 1em;
    }

    .more_ux_text button:hover{background: none}

    /*---------------------ART BANNER-----------------------*/

    .art_banner{
        margin: 4em auto 6em auto;
        padding: 0 1em;
        max-width: 68em;
    }

    .art_banner h1, .art_banner h3{
        color: #FFF;
    }

    .art_banner_image{
        position: relative;
        border-radius: .7em;
        height: 75vh;
        max-height: 60em;
        background-image: url(media/index_ux/art_banner.jpg);
        background-position: 35% 45%;
        background-repeat: no-repeat;
        background-size: cover;
        min-height: 35em;
        filter: drop-shadow(0 .4em .3em rgba(0, 0, 0, 0.2));
        -webkit-filter: drop-shadow(0 .4em .3em rgba(0, 0, 0, 0.2));
    }

    .art_banner_text{
        position: absolute;
        bottom: 4em;
        left: 4em;
    }

    .art_banner h4{
        padding-left: 1.3em;
        padding-bottom: 1.3em;
    }

    .art_banner button{
        margin-top: 2em;
        color: #FFF;
        border: #FFF solid 2px;
    }

    .art_banner button:hover{
        color: #242424;
        background-color: #FFF;
    }

    @media only screen and (max-width: 80em){
        .art_banner_text{
            bottom: 2.3em;
            left: 2.3em;
            margin-right: 2.5em
        }
    }


    /*--------------------ART.HTML-----------------------*/

    .art_container{
        display: grid;
        margin: 5em 0 5px 0;
        grid-gap: 5px;
    }

    .art_container img{
        display: block;
        width: 100%;
        height: 100%;
        object-fit: cover;
    }

    .side_by_side{
        display: grid;
        grid-template-columns: auto auto;
        grid-column-gap: 5px;
    }

    .side_by_side1{
        display: grid;
        grid-template-columns: 1.2fr 1fr;
        grid-column-gap: 5px;
    }

    .side_by_side2{
        display: grid;
        grid-template-columns: 1.15fr 1fr;
        grid-column-gap: 5px;
    }

    .side_by_side3{
        display: grid;
        grid-template-columns: 3fr 0fr;
        grid-column-gap: 5px;
    }

    /*--------------------404.HTML-----------------------*/


    .doh{
        max-width: 68em;
        padding: 20vh 0em 0 10em;
        margin: 0 auto;  
    }

    .doh h2{
        max-width: 27em;
        margin-bottom: 1.5em;
    }

    .homer{
        margin: 0 10% 0 auto;
        max-width: 25em;
    }

    @media only screen and (max-width: 80em) {
        .doh{padding: 9em 2.5em 0em 2.5em}
        .homer{width: 15em}
    }

